# qrust

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cov.rs  iterative.rs  kalman.rs  lib.rs  linalg.rs  misc.rs  optim.rs  proba.rs  special.rs
src/filtering/: kalman.rs  mod.rs
src/linalg/: mod.rs
src/optim/: mod.rs  oned.rs
src/pricing/: european.rs  mod.rs
src/proba/: marginal.rs  mod.rs  proba.rs
